--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "git+https://github.com/gongxiancao/framework.git"
   },
-  "author": "",
+  "author": "gongxiancao",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/gongxiancao/framework/issues"
