--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/gongxiancao/framework#readme",
   "dependencies": {
-    "async": "^1.5.2"
+    "async": "1.5.2",
+    "lodash": "4.4.0"
   }
 }
